# Back2Basics2023

./: .gitignore  README.md
DataTypes/: basicDataTypes.cpp  booleans.cpp  characters.cpp  scientificNumbers.cpp  uint8_tPrinting.cpp
Files/: CMakeLists.txt  basicFileOperations.cpp  firstExercise.cpp  secondExercise.cpp  thirdExercise.cpp
Namespaces/: identicalNames.cpp  namespaceStd.cpp  twoEngineersNamespaces.cpp
Namespaces/output/: identicalNames  namespaceStd  twoEngineersNamespaces
Operators/: arithmetic.cpp  assignment.cpp  comparison.cpp  logical.cpp
Strings/: concatenation.cpp
