cmake_minimum_required(VERSION 3.23)

project(basicFileOperations)

add_executable(basicFileOperations basicFileOperations.cpp
        thirdExercise.cpp)

add_executable(firstExercise firstExercise.cpp)
add_executable(secondExercise secondExercise.cpp)
add_executable(thirdExercise thirdExercise.cpp)
